--- a/main.css
+++ b/main.css
@@ -33,9 +33,19 @@ summary {
     color:#454545;
 }
 
-.click-zoom {
-    width: 24em; 
-    display:inline-block;
+.textRight800 {
+  text-align: right; 
+  font-weight: 800;
+  margin-block-start: 0;
+  padding-right: 0.5em;
+}
+
+.width2 {width: 23.5em; }
+
+.width4 {width: 11em; }
+
+.click-zoom  {
+  display:inline-block;
 }
 
 .click-zoom input[type=checkbox] {
@@ -44,7 +54,8 @@ summary {
 
 .click-zoom img {  
   transition: transform 0.25s ease;
-  cursor: zoom-in
+  cursor: zoom-in;
+  width: 100%
 }
 
 .click-zoom input[type=checkbox]:checked~img {
@@ -52,9 +63,97 @@ summary {
   cursor: zoom-out
 }
 
+pre {
+  background-color: #f4f4f4; 
+  padding: 1em; 
+  overflow-x: auto;
+  border-radius: 8px;
+}
+
+table, th, td {
+  border: 1px solid;
+  padding: 0.5em;
+}
+
+table {
+  width: 100%;
+  border-collapse: collapse;
+}
 
 
+* {box-sizing:border-box}
 
+/* Slideshow container */
+.slideshow-container {
+  max-width: 1000px;
+  position: relative;
+  margin: auto;
+}
 
+/* Hide the images by default */
+.mySlides {
+  display: none;
+}
 
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  margin-top: -22px;
+  padding: 16px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
 
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
